[gd_scene load_steps=11 format=3 uid="uid://cjvu4cv2owon1"]

[ext_resource type="Script" path="res://scenes/main/mainMenu.gd" id="1_lxv21"]
[ext_resource type="Texture2D" uid="uid://bij28c55hfa8k" path="res://assets/art/menu screen bg art - 3pt at 1920 1080.png" id="3_vskej"]
[ext_resource type="Texture2D" uid="uid://dho8y4o02ai7d" path="res://assets/ui/guiBox.png" id="4_gwc4g"]
[ext_resource type="Texture2D" uid="uid://cppffyb1a3mtg" path="res://assets/ui/mainMenu_gameTitle.png" id="5_h2u1s"]
[ext_resource type="Texture2D" uid="uid://b1cyoju3vifhr" path="res://assets/images/animatedIconFrame1.png" id="7_g5g53"]
[ext_resource type="Theme" uid="uid://ro4pnv2rc2x7" path="res://assets/ui/themes and styleboxes/defaultTheme.tres" id="7_hwk8b"]
[ext_resource type="Texture2D" uid="uid://dluhrir6rbmgv" path="res://assets/images/animatedIconFrame2.png" id="8_hb5aq"]
[ext_resource type="Texture2D" uid="uid://bw7hdlpmhe63u" path="res://assets/images/placeholderclaw delte later.png" id="8_v1flm"]

[sub_resource type="GDScript" id="GDScript_ngtmh"]
script/source = "extends Button


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[sub_resource type="SpriteFrames" id="SpriteFrames_tnx5c"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_g5g53")
}, {
"duration": 1.0,
"texture": ExtResource("8_hb5aq")
}],
"loop": true,
"name": &"logo",
"speed": 5.0
}]

[node name="mainMenu" type="Control"]
clip_contents = true
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0
scale = Vector2(1.00179, 1)
theme = ExtResource("7_hwk8b")
script = ExtResource("1_lxv21")

[node name="img_backgroundImage" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -5.98928
offset_top = -1083.0
offset_right = 1914.01
offset_bottom = 1077.0
texture = ExtResource("3_vskej")

[node name="TextEditFather" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 1433.0
offset_top = 85.0
offset_right = 1674.0
offset_bottom = 130.0

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 1499.0
offset_top = 52.0
offset_right = 1690.0
offset_bottom = 84.0
text = "Father's code"

[node name="TextEditMother" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 1434.0
offset_top = 179.0
offset_right = 1675.0
offset_bottom = 224.0

[node name="TextEditOffspring" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 1435.0
offset_top = 284.0
offset_right = 1676.0
offset_bottom = 329.0

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 1474.0
offset_top = 145.0
offset_right = 1665.0
offset_bottom = 177.0
text = "Mother's code"

[node name="Label3" type="Label" parent="."]
layout_mode = 0
offset_left = 1485.0
offset_top = 241.0
offset_right = 1676.0
offset_bottom = 273.0
text = "Results in"

[node name="TextEditOffspring2" type="Button" parent="."]
layout_mode = 0
offset_left = 1710.0
offset_top = 197.0
offset_right = 1864.0
offset_bottom = 228.0
text = "Generate offspring"
script = SubResource("GDScript_ngtmh")

[node name="lbl_mainMenu_quickCreditsCopyright" type="Label" parent="."]
layout_mode = 2
offset_left = 1232.79
offset_top = 866.0
offset_right = 1875.79
offset_bottom = 1039.0
theme_override_colors/font_color = Color(0.152941, 0.12549, 0.109804, 1)
text = "Warriors and all related trademarks belong to their rightful owners. 
This project is a non-commercial fan creation and is not affiliated with or endorsed by the original creators."
horizontal_alignment = 1
autowrap_mode = 3

[node name="Menu" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -938.0
offset_top = -515.0
offset_right = -114.0
offset_bottom = 491.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_gwc4g")
region_rect = Rect2(0.4216, -1.52066, 503.306, 429.752)
patch_margin_left = 74
patch_margin_top = 74
patch_margin_right = 67
patch_margin_bottom = 67
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="mainTitleImg" type="TextureRect" parent="Menu"]
layout_mode = 2
offset_left = 88.8017
offset_top = 69.0
offset_right = 731.802
offset_bottom = 324.564
texture = ExtResource("5_h2u1s")
expand_mode = 5
stretch_mode = 5

[node name="mainMenuButtonContainer" type="VBoxContainer" parent="Menu"]
layout_mode = 2
offset_left = 93.7927
offset_top = 340.0
offset_right = 736.793
offset_bottom = 930.0

[node name="btn_mainMenu_continueFromLastSave#" type="Button" parent="Menu/mainMenuButtonContainer"]
layout_mode = 2
theme = ExtResource("7_hwk8b")
theme_override_font_sizes/font_size = 20
text = "continue"

[node name="btn_mainMenu_newGame" type="Button" parent="Menu/mainMenuButtonContainer"]
layout_mode = 2
theme = ExtResource("7_hwk8b")
theme_override_font_sizes/font_size = 20
text = "new game"

[node name="btn_mainMenu_loadGame" type="Button" parent="Menu/mainMenuButtonContainer"]
layout_mode = 2
theme = ExtResource("7_hwk8b")
theme_override_font_sizes/font_size = 20
text = "load game"

[node name="btn_mainMenu_settingsMenu" type="Button" parent="Menu/mainMenuButtonContainer"]
layout_mode = 2
theme = ExtResource("7_hwk8b")
theme_override_font_sizes/font_size = 20
text = "settings"

[node name="btn_mainMenu_creditsMenu" type="Button" parent="Menu/mainMenuButtonContainer"]
layout_mode = 2
theme = ExtResource("7_hwk8b")
theme_override_font_sizes/font_size = 20
text = "credits"

[node name="btn_mainMenu_quitToDesktop" type="Button" parent="Menu/mainMenuButtonContainer"]
layout_mode = 2
theme = ExtResource("7_hwk8b")
theme_override_font_sizes/font_size = 20
text = "quit to desktop"

[node name="gameLogoAnimated" type="AnimatedSprite2D" parent="."]
position = Vector2(1000, 500)
sprite_frames = SubResource("SpriteFrames_tnx5c")
animation = &"logo"

[node name="catPortraitForScale_ThisIsSizeTheyShldB" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 1731.9
offset_top = 903.0
offset_right = 1906.89
offset_bottom = 1078.0
texture = ExtResource("8_v1flm")
expand_mode = 1

[connection signal="pressed" from="TextEditOffspring2" to="." method="GENERATEOFFSPRINGDEBUGTEST"]
[connection signal="pressed" from="Menu/mainMenuButtonContainer/btn_mainMenu_continueFromLastSave#" to="." method="_on_btn_main_menu_continueFromLastSave_pressed"]
[connection signal="pressed" from="Menu/mainMenuButtonContainer/btn_mainMenu_newGame" to="." method="_on_StartGame_StartButton_up"]
[connection signal="pressed" from="Menu/mainMenuButtonContainer/btn_mainMenu_loadGame" to="." method="_on_btn_mainMenu_loadGame_pressed"]
[connection signal="pressed" from="Menu/mainMenuButtonContainer/btn_mainMenu_settingsMenu" to="." method="_on_btn_mainMenu_settingsMenu_pressed"]
[connection signal="pressed" from="Menu/mainMenuButtonContainer/btn_mainMenu_creditsMenu" to="." method="_on_btn_mainMenu_creditsMenu_pressed"]
[connection signal="pressed" from="Menu/mainMenuButtonContainer/btn_mainMenu_quitToDesktop" to="." method="_on_btn_mainMenu_quitToDesktop_pressed"]
